Fix for jumpy width in streams

--- a/styles/posts.less
+++ b/styles/posts.less
@@ -76,7 +76,7 @@ div.feeds-container {
 	border: 1px solid @light;
 	border-top: 0px solid;
 	margin-bottom: 30px;
-	min-width: 400px;
+	width: 500px;
 }
 
 ul.feeds {
